[metadata]
name = ug
version = 0.0.2
url = https://github.com/thorwhalen/ug
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Utils using Google API
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ug

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	googlemaps

